recursion.lessons.recursion.tree.Tree.scala.error
Tree:3: error: type mismatch;
 found   : Unit
 required: java.awt.Color
setCouleur(current(steps))
                  ^Tree:7: error: not enough arguments for method tree: (steps: Int, length: Double, angle: Double, shrink: Double)Unit.
Unspecified value parameters angle, shrink.
	tree(steps-1,shrink*length)
            ^